tests/reference/asr-test_annassign_01-2f18669.stderr
semantic error: The type 'Optional' is undeclared.
 --> tests/errors/test_annassign_01.py:2:8
  |
2 |     a: Optional[i32] = 5
  |        ^^^^^^^^^^^^^ 


Note: Please report unclear or confusing messages as bugs at
https://github.com/lcompilers/lpython/issues.
